# qbt

./: .gitignore  .prettierrc.cjs  .prettierrc.json  .yarnrc.yml  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  LoginDialog.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  main.rs  qbittorrent.rs  scrape.rs
src-tauri/src/db/: db_trait.rs
src-tauri/src/scrape/: code.rs  crawl.rs  mod.rs
src-tauri/src/scrape/crawlers/: airav.rs  airav_cc.rs  airav_cdp.rs  avwiki.rs  cookie_jar.rs  crawler.rs  crawler_cdp.rs  fc2.rs  fc2ppvdb.html  fc2ppvdb.rs  fc2ppvdb_cdp.rs  iqqtv.rs  javbus.html  javbus.rs  mod.rs  officials.rs  prestige.rs  web.rs
src/lib/: QBittorrent.ts  bindings.ts  format.ts  makeTree.ts  qBittorrentTypes.ts  useClipboard.ts  useStore.ts
src/ui/: ActressAvatar.tsx  AddDialog.tsx  Gallery.tsx  InfoDialog.tsx  LoginDialog.tsx  ReloadImage.tsx  RenameDialog.tsx  SettingsDialog.tsx  TorrentDialog.tsx  TorrentTable.tsx  VideoInfoPanel.tsx
