[package]
name = "qbt"
version = "0.2.5"
description = "qBittorrent"
authors = ["karoyqiu@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.39"
cookie = "0.18.1"
derive_builder = "0.20.2"
futures = { version = "0.3.31", default-features = false }
lazy_static = "1.5.0"
log = "0.4.22"
ormlite = { version = "0.22.8", features = ["sqlite"] }
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["gzip", "deflate", "brotli", "cookies", "json", "http2", "multipart", "zstd"] }
reqwest_cookie_store = "0.8.0"
scraper = "0.22.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
serde_with = "3.12.0"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-specta = { version = "=2.0.0-rc.20", features = ["typescript"] }
translators = { version = "0.1.5", features = ["google", "tokio-async"] }
url = "2.5.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
